Fixing parsing of files with Comma and other special characters in message